// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test LfTtlSummaryCard snapshots LfTtlSummaryCard should display only ttls 1`] = `
<div
  className="ttl-lf-card"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  <p
    className="ttl-lf-card__title d-none"
  >
    All TTLs
  </p>
  <div
    className=""
  >
    <img
      alt=""
      className="img-responsive rounded-circle ttl-lf-card__avatar"
      src="profile.svg"
    />
    <p
      className="ttl-lf-card__name"
    >
      Test TTL
    </p>
  </div>
  <img
    alt=""
    className="ttl-lf-card__check-mark  "
    src="check-mark.svg"
  />
  <p
    className="ttl-lf-card__number"
  >
    8
  </p>
  <br />
</div>
`;

exports[`Test LfTtlSummaryCard snapshots LfTtlSummaryCard should display the main card 1`] = `
<div
  className="ttl-lf-card"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  <p
    className="ttl-lf-card__title "
  >
    All TTLs
  </p>
  <div
    className="d-none"
  >
    <img
      alt=""
      className="img-responsive rounded-circle ttl-lf-card__avatar"
      src="profile.svg"
    />
    <p
      className="ttl-lf-card__name"
    >
      Test TTL
    </p>
  </div>
  <img
    alt=""
    className="ttl-lf-card__check-mark  "
    src="check-mark.svg"
  />
  <p
    className="ttl-lf-card__number"
  >
    8
  </p>
  <br />
</div>
`;
